# matorral

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  AUTHORS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  Procfile  Procfile.local  README.md  app.json  coverage.json  dependabot.yml  docker-compose.yml  justfile  manage.py  minimal.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tox.ini  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  deploy.yml  gh-repo-stats.yml  labels.yml  migrations.yml  pre-commit.yml  tests.yml
alameda/: context_processors.py  forms.py  models.py  routing.py
alameda/authentication/test/: test_signals.py
alameda/health_checks/: urls.py
alameda/sprints/: admin.py  apps.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
alameda/sprints/migrations/: 0002_auto_20190622_2321.py  0003_auto_20190624_0903.py  0005_auto_20190627_2244.py
alameda/stories/: admin.py  consumers.py  forms.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
alameda/stories/fixtures/: initial.json  initial_data.json
alameda/stories/migrations/: 0001_initial.py  0002_auto_20190525_1913.py  0004_auto_20190525_2309.py
alameda/taskapp/: celery.py
alameda/templates/: base.html  listview-left.html  paginator.html
alameda/templates/registration/: logged_out.html  login.html
alameda/users/: serializers.py  urls.py  views.py
apps/dashboard/: apps.py  context_processors.py  helpers.py  urls.py  views.py
apps/generic_ui/: actions.py  apps.py
apps/generic_ui/tests/: test_actions.py
apps/issues/: admin.py  apps.py  cascade.py  factories.py  forms.py  helpers.py  managers.py  models.py  services.py  urls.py  utils.py  widgets.py
apps/issues/migrations/: 0001_initial.py  0002_initial.py  0003_migrate_subtask_to_baseissue.py  0003_migrate_subtasks_to_tree.py  0004_delete_subtask.py  0004_migrate_subtask_data.py  0005_cleanup_subtask_contenttype.py  0005_drop_subtask_legacy_table.py  0006_rename_milestone_to_legacy_and_create_new.py  0006_subtask.py  0007_convert_baseissue_subtasks_to_subtask.py  0007_migrate_milestone_data.py  0008_drop_milestone_legacy.py
apps/issues/templatetags/: attachment_extras.py  issues_tags.py
apps/issues/tests/: test_bulk_views.py  test_cascade.py  test_cascade_delete.py  test_cascade_views.py  test_comments.py  test_convert_type.py  test_helpers.py  test_managers.py  test_models.py  test_permissions.py  test_promote_to_epic.py  test_subtasks.py  test_tree_views.py  test_views.py
apps/landing_pages/: apps.py  sitemaps.py  urls.py  views.py
apps/projects/: admin.py  apps.py  factories.py  forms.py  managers.py  models.py  registry.py  tasks.py  urls.py
apps/sprints/: admin.py  apps.py  factories.py  forms.py  managers.py  models.py  registry.py  tasks.py  urls.py
apps/users/: adapters.py  admin.py  apps.py  factories.py  forms.py  managers.py  middleware.py  models.py  signals.py  urls.py  validators.py  views.py
apps/utils/: apps.py  audit.py  filters.py  managers.py  models.py  progress.py
apps/workspaces/: adapter.py  admin.py  apps.py  context.py  context_processors.py  decorators.py  demo_data.py  factories.py  forms.py  helpers.py  invitations.py  limits.py  managers.py  middleware.py  mixins.py  models.py  roles.py  signals.py  slugs.py  tasks.py  urls.py  views.py
assets/css/: site-base.css  site-tailwind.css
assets/js/: alpine.js  app.js  htmx.js  site.js
config/: env.example  settings.py  urls.py  wsgi.py
config/settings/: common.py  env.example  local.py  production.py  staging.py  testing.py
docker/: startup.sh
docker/dev/: Dockerfile
docker/django/: Dockerfile
docker/vite/: Dockerfile
matorral/: asgi.py  celery.py  context_processors.py  error_views.py  forms.py  middlewares.py  models.py  settings.py  settings_production.py  storage.py  urls.py  utils.py  views.py  wsgi.py
matorral/authentication/: urls.py
matorral/contrib/: __init__.py
matorral/dashboard/: apps.py  urls.py  views.py
matorral/generic_ui/: apps.py  tasks.py  urls.py  views.py
matorral/health_checks/: urls.py  views.py
matorral/settings/: production.py  settings.py
matorral/sprints/: admin.py  apps.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
matorral/stories/: admin.py  apps.py  factories.py  forms.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
matorral/taskapp/: celery.py
matorral/templates/: base.html  listview-left.html
matorral/tests/: test_middlewares.py
matorral/users/: admin.py  models.py  urls.py  views.py
matorral/workspaces/: admin.py  apps.py  factories.py  forms.py  middlewares.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
requirements/: base.txt  local.txt  production.txt  test.txt
stories/: admin.py  models.py
stories/fixtures/: initial_data.json
stories/migrations/: 0001_initial.py  0002_historicalepic_historicalsprint_historicalstory.py  0003_auto_20190520_1440.py  0004_auto_20190520_1502.py  0005_auto_20190520_1508.py  0006_auto_20190520_1515.py  0007_auto_20190521_1004.py  0008_auto_20190521_1005.py  0009_auto_20190522_0731.py
templates/: anonymous_base.html  base.html
templates/apps/: base.html
templates/attachments/: add.html  add_form.html  delete.html  delete_link.html
templates/errors/: 400.html  403.html  404.html  429.html  500.html  base.html
templates/includes/: bulk_person_modal.html  cascade_status_modal.html  dashboard_issue_row_edit.html  delete_confirm_modal.html  dev_ribbon.html  favicon.html  filters_modal.html  footer.html  google_analytics.html  loading_indicator.html  messages-js.html  messages.html  modal_shell.html  non_field_errors.html  paginator_htmx.html  quick_view_modal.html  search_input.html  sidebar_app.html  top_nav.html  top_nav_app.html  user_combobox.html  workspace_nav_items.html
workflows/: frontend.yml  migrations.yml
(+421 files in other folders)
